// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsListScreen handleScroll paginates when close to bottom 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -354,11 +354,11 @@
              \\"nodes\\": Array [],
            },
            \\"report\\": Object {
              \\"__typename\\": \\"CommunitiesReport\\",
              \\"contactCount\\": 0,
-             \\"memberCount\\": 41702,
+             \\"memberCount\\": 94948,
              \\"unassignedCount\\": 0,
            },
            \\"unreadCommentsCount\\": 0,
          },
          Object {
@@ -638,11 +638,291 @@
              \\"contactCount\\": 26992,
              \\"memberCount\\": 35653,
              \\"unassignedCount\\": 89588,
            },
            \\"unreadCommentsCount\\": 88330,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"doloremque molestias dolore\\",
+           \\"id\\": \\"15\\",
+           \\"name\\": \\"Business-focused heuristic forecast\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Bartholome\\",
+                 \\"lastName\\": \\"Stokes\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Edwina\\",
+                 \\"lastName\\": \\"Lind\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 23175,
+             \\"memberCount\\": 55282,
+             \\"unassignedCount\\": 96766,
+           },
+           \\"unreadCommentsCount\\": 10736,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"minima quia ut\\",
+           \\"id\\": \\"16\\",
+           \\"name\\": \\"Organized value-added groupware\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Durward\\",
+                 \\"lastName\\": \\"Bosco\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kyle\\",
+                 \\"lastName\\": \\"Marks\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 96959,
+             \\"memberCount\\": 41792,
+             \\"unassignedCount\\": 56103,
+           },
+           \\"unreadCommentsCount\\": 84203,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"sit vel et\\",
+           \\"id\\": \\"17\\",
+           \\"name\\": \\"Implemented contextually-based process improvement\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Effie\\",
+                 \\"lastName\\": \\"Feeney\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Mike\\",
+                 \\"lastName\\": \\"Schoen\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 61294,
+             \\"memberCount\\": 38786,
+             \\"unassignedCount\\": 42690,
+           },
+           \\"unreadCommentsCount\\": 36784,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"facere placeat molestiae\\",
+           \\"id\\": \\"18\\",
+           \\"name\\": \\"Triple-buffered real-time local area network\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kayley\\",
+                 \\"lastName\\": \\"Keebler\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Bridie\\",
+                 \\"lastName\\": \\"Hessel\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 5991,
+             \\"memberCount\\": 15333,
+             \\"unassignedCount\\": 12134,
+           },
+           \\"unreadCommentsCount\\": 86354,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"quae sint odit\\",
+           \\"id\\": \\"19\\",
+           \\"name\\": \\"Front-line 24 hour product\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Oswaldo\\",
+                 \\"lastName\\": \\"Fadel\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Lewis\\",
+                 \\"lastName\\": \\"Rath\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 3599,
+             \\"memberCount\\": 55971,
+             \\"unassignedCount\\": 65432,
+           },
+           \\"unreadCommentsCount\\": 93719,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"magni quasi exercitationem\\",
+           \\"id\\": \\"20\\",
+           \\"name\\": \\"Polarised bottom-line firmware\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Viva\\",
+                 \\"lastName\\": \\"Hessel\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kenyon\\",
+                 \\"lastName\\": \\"Goodwin\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 20329,
+             \\"memberCount\\": 7396,
+             \\"unassignedCount\\": 25232,
+           },
+           \\"unreadCommentsCount\\": 1255,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"maxime neque adipisci\\",
+           \\"id\\": \\"21\\",
+           \\"name\\": \\"Organized intangible ability\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Trevion\\",
+                 \\"lastName\\": \\"McClure\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Gabriel\\",
+                 \\"lastName\\": \\"Wisozk\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 5001,
+             \\"memberCount\\": 84682,
+             \\"unassignedCount\\": 74095,
+           },
+           \\"unreadCommentsCount\\": 15213,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"ullam quos sed\\",
+           \\"id\\": \\"22\\",
+           \\"name\\": \\"Team-oriented next generation frame\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Liliana\\",
+                 \\"lastName\\": \\"Wunsch\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Rhoda\\",
+                 \\"lastName\\": \\"Trantow\\",
                },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 15679,
+             \\"memberCount\\": 75934,
+             \\"unassignedCount\\": 1857,
+           },
+           \\"unreadCommentsCount\\": 23984,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"quasi eaque corrupti\\",
+           \\"id\\": \\"23\\",
+           \\"name\\": \\"Multi-layered transitional process improvement\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Raquel\\",
+                 \\"lastName\\": \\"Moen\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Nora\\",
+                 \\"lastName\\": \\"Mante\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 45528,
+             \\"memberCount\\": 31736,
+             \\"unassignedCount\\": 53182,
+           },
+           \\"unreadCommentsCount\\": 65112,
+         },
+         Object {
+           \\"__typename\\": \\"Community\\",
+           \\"communityPhotoUrl\\": \\"aut culpa ratione\\",
+           \\"id\\": \\"24\\",
+           \\"name\\": \\"Pre-emptive holistic access\\",
+           \\"owner\\": Object {
+             \\"__typename\\": \\"CommunityPersonConnection\\",
+             \\"nodes\\": Array [
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Genoveva\\",
+                 \\"lastName\\": \\"Lang\\",
+               },
+               Object {
+                 \\"__typename\\": \\"Person\\",
+                 \\"firstName\\": \\"Kathryn\\",
+                 \\"lastName\\": \\"Emard\\",
+               },
+             ],
+           },
+           \\"report\\": Object {
+             \\"__typename\\": \\"CommunitiesReport\\",
+             \\"contactCount\\": 74533,
+             \\"memberCount\\": 91644,
+             \\"unassignedCount\\": 66923,
+           },
+           \\"unreadCommentsCount\\": 98861,
+         },
        ]
      }
      disableVirtualization={false}
      getItem={[Function anonymous]}
      getItemCount={[Function anonymous]}
@@ -700,11 +980,11 @@
                  \\"nodes\\": Array [],
                },
                \\"report\\": Object {
                  \\"__typename\\": \\"CommunitiesReport\\",
                  \\"contactCount\\": 0,
-                 \\"memberCount\\": 41702,
+                 \\"memberCount\\": 94948,
                  \\"unassignedCount\\": 0,
                },
                \\"unreadCommentsCount\\": 0,
              }
            }
@@ -1055,11 +1335,11 @@
          />
        </View>
        <View
          style={
            Object {
-             \\"height\\": 4198.75,
+             \\"height\\": 8397.5,
            }
          }
        />
      </View>
    </RCTScrollView>"
`;

exports[`GroupsListScreen handleScroll should not load more when no next page 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`GroupsListScreen handleScroll should not load more when not scrolling close to bottom 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`GroupsListScreen renders with communities 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="menuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Image
              resizeMode="cover"
              source={
                Object {
                  "uri": "architecto fugit repellendus",
                }
              }
              style={
                Array [
                  Object {
                    "borderRadius": 24,
                    "height": 48,
                    "width": 48,
                  },
                  Object {
                    "backgroundColor": "rgb(122, 19, 115)",
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                Object {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              ],
            ]
          }
        >
          Communities
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="joinCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#005A7F",
                  "flexBasis": 40,
                  "justifyContent": "center",
                  "paddingVertical": 13,
                },
                Object {
                  "borderRightColor": "#007398",
                  "borderRightWidth": 1,
                },
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            JOIN A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="createCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#005A7F",
                "flexBasis": 40,
                "justifyContent": "center",
                "paddingVertical": 13,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            CREATE A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Community",
          "communityPhotoUrl": null,
          "id": "_global_community_id",
          "name": "MissionHub",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 0,
            "memberCount": 41702,
            "unassignedCount": 0,
          },
          "unreadCommentsCount": 0,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "quam tempore a",
          "id": "1",
          "name": "Vision-oriented non-volatile system engine",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Hannah",
                "lastName": "Lemke",
              },
              Object {
                "__typename": "Person",
                "firstName": "Clinton",
                "lastName": "Pollich",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 28962,
            "memberCount": 31551,
            "unassignedCount": 14212,
          },
          "unreadCommentsCount": 59306,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "repellendus fugiat velit",
          "id": "2",
          "name": "Adaptive bandwidth-monitored encryption",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Aida",
                "lastName": "Barton",
              },
              Object {
                "__typename": "Person",
                "firstName": "Nelson",
                "lastName": "Mueller",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 98886,
            "memberCount": 66063,
            "unassignedCount": 74816,
          },
          "unreadCommentsCount": 68650,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "minima ducimus temporibus",
          "id": "3",
          "name": "Vision-oriented bifurcated core",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Damaris",
                "lastName": "Brakus",
              },
              Object {
                "__typename": "Person",
                "firstName": "Antwon",
                "lastName": "King",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 46923,
            "memberCount": 90859,
            "unassignedCount": 9617,
          },
          "unreadCommentsCount": 29849,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "ut quis sed",
          "id": "4",
          "name": "Compatible foreground collaboration",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Breana",
                "lastName": "Ledner",
              },
              Object {
                "__typename": "Person",
                "firstName": "Aimee",
                "lastName": "Boehm",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 67883,
            "memberCount": 91686,
            "unassignedCount": 21162,
          },
          "unreadCommentsCount": 29361,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "ut ullam quos",
          "id": "5",
          "name": "Innovative encompassing moratorium",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Krystina",
                "lastName": "Becker",
              },
              Object {
                "__typename": "Person",
                "firstName": "Kennedy",
                "lastName": "Marvin",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 61393,
            "memberCount": 14672,
            "unassignedCount": 95653,
          },
          "unreadCommentsCount": 91044,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "quaerat cumque incidunt",
          "id": "6",
          "name": "Integrated user-facing intranet",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Bartholome",
                "lastName": "Lemke",
              },
              Object {
                "__typename": "Person",
                "firstName": "Harrison",
                "lastName": "Wiegand",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 69440,
            "memberCount": 49305,
            "unassignedCount": 41417,
          },
          "unreadCommentsCount": 58930,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "ab voluptas sed",
          "id": "7",
          "name": "Switchable full-range extranet",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Alverta",
                "lastName": "Ondricka",
              },
              Object {
                "__typename": "Person",
                "firstName": "Brook",
                "lastName": "Larkin",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 79240,
            "memberCount": 94459,
            "unassignedCount": 2980,
          },
          "unreadCommentsCount": 54060,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "aut ut ut",
          "id": "8",
          "name": "Public-key incremental concept",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Brionna",
                "lastName": "King",
              },
              Object {
                "__typename": "Person",
                "firstName": "Broderick",
                "lastName": "Toy",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 80739,
            "memberCount": 37758,
            "unassignedCount": 39767,
          },
          "unreadCommentsCount": 58655,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "dolorem et molestiae",
          "id": "9",
          "name": "Monitored system-worthy contingency",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Frances",
                "lastName": "Hegmann",
              },
              Object {
                "__typename": "Person",
                "firstName": "Khalid",
                "lastName": "Rohan",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 63783,
            "memberCount": 72599,
            "unassignedCount": 12631,
          },
          "unreadCommentsCount": 53842,
        },
        Object {
          "__typename": "Community",
          "communityPhotoUrl": "est fuga est",
          "id": "10",
          "name": "Ameliorated intangible moratorium",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [
              Object {
                "__typename": "Person",
                "firstName": "Nettie",
                "lastName": "Herman",
              },
              Object {
                "__typename": "Person",
                "firstName": "Favian",
                "lastName": "Ruecker",
              },
            ],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 26992,
            "memberCount": 35653,
            "unassignedCount": 89588,
          },
          "unreadCommentsCount": 88330,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
    testID="flatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": null,
              "id": "_global_community_id",
              "name": "MissionHub",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 0,
                "memberCount": 41702,
                "unassignedCount": 0,
              },
              "unreadCommentsCount": 0,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "quam tempore a",
              "id": "1",
              "name": "Vision-oriented non-volatile system engine",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Hannah",
                    "lastName": "Lemke",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Clinton",
                    "lastName": "Pollich",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 28962,
                "memberCount": 31551,
                "unassignedCount": 14212,
              },
              "unreadCommentsCount": 59306,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "repellendus fugiat velit",
              "id": "2",
              "name": "Adaptive bandwidth-monitored encryption",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Aida",
                    "lastName": "Barton",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Nelson",
                    "lastName": "Mueller",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 98886,
                "memberCount": 66063,
                "unassignedCount": 74816,
              },
              "unreadCommentsCount": 68650,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "minima ducimus temporibus",
              "id": "3",
              "name": "Vision-oriented bifurcated core",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Damaris",
                    "lastName": "Brakus",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Antwon",
                    "lastName": "King",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 46923,
                "memberCount": 90859,
                "unassignedCount": 9617,
              },
              "unreadCommentsCount": 29849,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "ut quis sed",
              "id": "4",
              "name": "Compatible foreground collaboration",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Breana",
                    "lastName": "Ledner",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Aimee",
                    "lastName": "Boehm",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 67883,
                "memberCount": 91686,
                "unassignedCount": 21162,
              },
              "unreadCommentsCount": 29361,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "ut ullam quos",
              "id": "5",
              "name": "Innovative encompassing moratorium",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Krystina",
                    "lastName": "Becker",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Kennedy",
                    "lastName": "Marvin",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 61393,
                "memberCount": 14672,
                "unassignedCount": 95653,
              },
              "unreadCommentsCount": 91044,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "quaerat cumque incidunt",
              "id": "6",
              "name": "Integrated user-facing intranet",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Bartholome",
                    "lastName": "Lemke",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Harrison",
                    "lastName": "Wiegand",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 69440,
                "memberCount": 49305,
                "unassignedCount": 41417,
              },
              "unreadCommentsCount": 58930,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "ab voluptas sed",
              "id": "7",
              "name": "Switchable full-range extranet",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Alverta",
                    "lastName": "Ondricka",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Brook",
                    "lastName": "Larkin",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 79240,
                "memberCount": 94459,
                "unassignedCount": 2980,
              },
              "unreadCommentsCount": 54060,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "aut ut ut",
              "id": "8",
              "name": "Public-key incremental concept",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Brionna",
                    "lastName": "King",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Broderick",
                    "lastName": "Toy",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 80739,
                "memberCount": 37758,
                "unassignedCount": 39767,
              },
              "unreadCommentsCount": 58655,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": "dolorem et molestiae",
              "id": "9",
              "name": "Monitored system-worthy contingency",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [
                  Object {
                    "__typename": "Person",
                    "firstName": "Frances",
                    "lastName": "Hegmann",
                  },
                  Object {
                    "__typename": "Person",
                    "firstName": "Khalid",
                    "lastName": "Rohan",
                  },
                ],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 63783,
                "memberCount": 72599,
                "unassignedCount": 12631,
              },
              "unreadCommentsCount": 53842,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
      <View
        style={
          Object {
            "height": 4198.75,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`GroupsListScreen renders with only global community 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID="menuButton"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  Array [
                    Object {
                      "borderRadius": 24,
                      "height": 48,
                      "width": 48,
                    },
                    Object {
                      "backgroundColor": "#B4B6BA",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 26,
                        "fontWeight": "300",
                      },
                    ],
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "flex": 4,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "color": "white",
                  "fontSize": 14,
                  "fontWeight": "500",
                },
                Object {
                  "fontSize": 16,
                  "fontWeight": "400",
                  "lineHeight": 24,
                },
              ],
            ]
          }
        >
          Communities
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="joinCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "backgroundColor": "#005A7F",
                  "flexBasis": 40,
                  "justifyContent": "center",
                  "paddingVertical": 13,
                },
                Object {
                  "borderRightColor": "#007398",
                  "borderRightWidth": 1,
                },
              ],
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            JOIN A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="createCommunity"
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": 0,
                "borderWidth": 0,
                "height": 60,
                "justifyContent": "center",
                "margin": 0,
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              null,
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "backgroundColor": "#005A7F",
                "flexBasis": 40,
                "justifyContent": "center",
                "paddingVertical": 13,
              },
              null,
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "#ffffff",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "letterSpacing": 1.5,
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "fontWeight": "bold",
                  },
                ],
              ]
            }
          >
            CREATE A COMMUNITY
          </Text>
        </View>
      </View>
    </View>
  </View>
  <RCTScrollView
    data={
      Array [
        Object {
          "__typename": "Community",
          "communityPhotoUrl": null,
          "id": "_global_community_id",
          "name": "MissionHub",
          "owner": Object {
            "__typename": "CommunityPersonConnection",
            "nodes": Array [],
          },
          "report": Object {
            "__typename": "CommunitiesReport",
            "contactCount": 0,
            "memberCount": 0,
            "unassignedCount": 0,
          },
          "unreadCommentsCount": 0,
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    getItemLayout={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        refreshing={false}
      />
    }
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "paddingVertical": 8,
      }
    }
    testID="flatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        style={null}
      >
        <GroupCardItem
          group={
            Object {
              "__typename": "Community",
              "communityPhotoUrl": null,
              "id": "_global_community_id",
              "name": "MissionHub",
              "owner": Object {
                "__typename": "CommunityPersonConnection",
                "nodes": Array [],
              },
              "report": Object {
                "__typename": "CommunitiesReport",
                "contactCount": 0,
                "memberCount": 0,
                "unassignedCount": 0,
              },
              "unreadCommentsCount": 0,
            }
          }
          onPress={[Function]}
          testID="GroupCard"
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
